--- a/src/main/resources/templates/empresa_anfitrion/editar.html
+++ b/src/main/resources/templates/empresa_anfitrion/editar.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <a href="/empresa-anfitrion" class="btn btn-secondary me-2">Cancelar</a>
+                    <a href="/empresa" class="btn btn-secondary me-2">Cancelar</a>
                     <button type="submit" class="btn btn-primary">Guardar Cambios</button>
                 </div>
             </form>
