--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -129,6 +129,75 @@
                                 </div>
                             </div>
 
+                            <!-- EMPRESA -->
+                            <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
+                                th:classappend="${#strings.contains(active_page, 'empresa') || #strings.contains(active_page, 'sucursal') || #strings.contains(active_page, 'empleado') || #strings.contains(active_page, 'cargo')} ? ' show' : ''">
+
+                                <span class="menu-link">
+                                    <span class="menu-icon"><i class="bi bi-building fs-3"></i></span>
+                                    <span class="menu-title">Empresa</span>
+                                    <span class="menu-arrow"></span>
+                                </span>
+
+                                <div class="menu-sub menu-sub-accordion menu-active-bg">
+                                    <!-- Datos de la empresa -->
+                                    <div class="menu-item">
+                                        <a class="menu-link"
+                                            th:classappend="${active_page} == 'empresa' ? 'active text-danger' : ''"
+                                            th:href="@{/empresa}">
+                                            <span class="menu-icon"><i class="bi bi-info-circle fs-4"></i></span>
+                                            <span class="menu-title">Datos de la empresa</span>
+                                        </a>
+                                    </div>
+
+
+                                    <!-- EMPLEADOS (submenu) -->
+                                    <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
+                                        th:classappend="${#strings.contains(active_page, 'empleado') || #strings.contains(active_page, 'cargo')} ? ' show' : ''">
+
+                                        <span class="menu-link">
+                                            <span class="menu-icon"><i class="bi bi-people fs-4"></i></span>
+                                            <span class="menu-title">Empleados</span>
+                                            <span class="menu-arrow"></span>
+                                        </span>
+
+                                        <div class="menu-sub menu-sub-accordion menu-active-bg">
+                                            <!-- Lista de empleados -->
+                                            <div class="menu-item">
+                                                <a class="menu-link"
+                                                    th:classappend="${active_page} == 'empleado' ? 'active text-danger' : ''"
+                                                    th:href="@{/empleado}">
+                                                    <span class="menu-icon"><i
+                                                            class="bi bi-person-lines-fill fs-5"></i></span>
+                                                    <span class="menu-title">Lista de empleados</span>
+                                                </a>
+                                            </div>
+
+                                            <!-- Cargos -->
+                                            <div class="menu-item">
+                                                <a class="menu-link"
+                                                    th:classappend="${active_page} == 'cargo' ? 'active text-danger' : ''"
+                                                    th:href="@{/cargo}">
+                                                    <span class="menu-icon"><i class="bi bi-briefcase fs-5"></i></span>
+                                                    <span class="menu-title">Cargos</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                    <!-- Sucursales -->
+                                    <div class="menu-item">
+                                        <a class="menu-link"
+                                            th:classappend="${active_page} == 'sucursal' ? 'active text-danger' : ''"
+                                            th:href="@{/sucursal}">
+                                            <span class="menu-icon"><i class="bi bi-geo-alt fs-4"></i></span>
+                                            <span class="menu-title">Sucursales</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!-- CLIENTES -->
                             <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
                                 th:classappend="${#strings.contains(active_page, 'cliente') || #strings.contains(active_page, 'categoria-cliente')} ? ' show' : ''">
@@ -221,7 +290,7 @@
 
                             <!-- MOVIMIENTOS -->
                             <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
-                                th:classappend="${active_page} == 'tipo-movimiento' ? ' show' : ''">
+                                th:classappend="${#strings.contains(active_page, 'tipo-movimiento') || #strings.contains(active_page, 'kardex')} ? ' show' : ''">
 
                                 <span class="menu-link">
                                     <span class="menu-icon"><i class="bi bi-arrow-left-right fs-3"></i></span>
@@ -250,84 +319,32 @@
                                         </a>
                                     </div>
                                 </div>
+
                             </div>
-
-
-
-
-
-
-
-
-
-                            <!-- EMPRESA -->
+                            <!-- VENTAS -->
                             <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
-                                th:classappend="${#strings.contains(active_page, 'empresa') || #strings.contains(active_page, 'sucursal') || #strings.contains(active_page, 'empleado') || #strings.contains(active_page, 'cargo')} ? ' show' : ''">
+                                th:classappend="${#strings.contains(active_page, 'venta') || #strings.contains(active_page, 'listaventa')} ? ' show' : ''">
 
                                 <span class="menu-link">
-                                    <span class="menu-icon"><i class="bi bi-building fs-3"></i></span>
-                                    <span class="menu-title">Empresa</span>
+                                    <span class="menu-icon"><i class="bi bi-receipt fs-3"></i></span>
+                                    <span class="menu-title">Ventas</span>
                                     <span class="menu-arrow"></span>
                                 </span>
 
                                 <div class="menu-sub menu-sub-accordion menu-active-bg">
-                                    <!-- Datos de la empresa -->
+
                                     <div class="menu-item">
                                         <a class="menu-link"
-                                            th:classappend="${active_page} == 'empresa' ? 'active text-danger' : ''"
-                                            th:href="@{/empresa}">
-                                            <span class="menu-icon"><i class="bi bi-info-circle fs-4"></i></span>
-                                            <span class="menu-title">Datos de la empresa</span>
-                                        </a>
-                                    </div>
-
-
-                                    <!-- EMPLEADOS (submenu) -->
-                                    <div data-kt-menu-trigger="click" class="menu-item menu-accordion"
-                                        th:classappend="${#strings.contains(active_page, 'empleado') || #strings.contains(active_page, 'cargo')} ? ' show' : ''">
-
-                                        <span class="menu-link">
-                                            <span class="menu-icon"><i class="bi bi-people fs-4"></i></span>
-                                            <span class="menu-title">Empleados</span>
-                                            <span class="menu-arrow"></span>
-                                        </span>
-
-                                        <div class="menu-sub menu-sub-accordion menu-active-bg">
-                                            <!-- Lista de empleados -->
-                                            <div class="menu-item">
-                                                <a class="menu-link"
-                                                    th:classappend="${active_page} == 'empleado' ? 'active text-danger' : ''"
-                                                    th:href="@{/empleado}">
-                                                    <span class="menu-icon"><i
-                                                            class="bi bi-person-lines-fill fs-5"></i></span>
-                                                    <span class="menu-title">Lista de empleados</span>
-                                                </a>
-                                            </div>
-
-                                            <!-- Cargos -->
-                                            <div class="menu-item">
-                                                <a class="menu-link"
-                                                    th:classappend="${active_page} == 'cargo' ? 'active text-danger' : ''"
-                                                    th:href="@{/cargo}">
-                                                    <span class="menu-icon"><i class="bi bi-briefcase fs-5"></i></span>
-                                                    <span class="menu-title">Cargos</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <!-- Sucursales -->
-                                    <div class="menu-item">
-                                        <a class="menu-link"
-                                            th:classappend="${active_page} == 'sucursal' ? 'active text-danger' : ''"
-                                            th:href="@{/sucursal}">
-                                            <span class="menu-icon"><i class="bi bi-geo-alt fs-4"></i></span>
-                                            <span class="menu-title">Sucursales</span>
+                                            th:classappend="${active_page} == 'listarventa' ? 'active text-danger' : ''"
+                                            th:href="@{/ventas}">
+                                            <span class="menu-icon"><i class="bi bi-list-check fs-4"></i></span>
+                                            <span class="menu-title">Listado de Ventas</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
+
+
 
                             <div class="menu-item">
                                 <div class="menu-content pt-8 pb-2">
