--- a/src/main/resources/templates/empleado/empleados.html
+++ b/src/main/resources/templates/empleado/empleados.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
 
-            <div class="table-responsive">
+            <div class="table-responsive rounded-3">
                 <table class="table table-hover table-bordered align-middle">
                     <thead class="table-dark text-center">
                         <tr>
