--- a/src/main/resources/templates/venta/crear.html
+++ b/src/main/resources/templates/venta/crear.html
@@ -73,6 +73,7 @@
                     <h4 class="text-success"><i class="bi bi-box-seam"></i> Agregar Productos</h4>
                     <div class="row g-2">
                         <div class="col-md-6">
+                            <label class="form-label"><i></i> Producto</label>
                             <select id="producto-select" class="form-select">
                                 <option th:value="${null}" th:text="'Seleccione un producto'"></option>
                                 <option th:each="p : ${productos}" th:value="${p.id}" th:data-stock="${p.stock}"
@@ -81,10 +82,12 @@
                             </select>
                         </div>
                         <div class="col-md-3">
-                            <input type="number" id="cantidad" placeholder="Cantidad" min="1" value="1"
+                            <label class="form-label"><i></i> Cantidad</label>
+                            <input type="number" id="cantidad" placeholder="Cantidad" min="1" value="1" step="1"
                                 class="form-control" />
                         </div>
                         <div class="col-md-3">
+                            <label class="form-label"><i></i> Stock</label>
                             <input type="text" id="stock-disponible" class="form-control bg-light" readonly
                                 placeholder="Stock disponible" />
                         </div>
